<resources>
    <string name="app_name">Hackathon3_GroupD</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_title_header">Delivered To</string>
    <string name="text_header_location">Jalan Depok Timur</string>
    <string name="text_banner_desc">Stay home\nwe deliver</string>
    <string name="text_banner_greeting">Any where... Any time!!</string>
    <string name="text_greeting_product">You might looking for</string>
    <string name="text_product_weight_format">%.2f Kg</string>
    <string name="text_product_price_format">Rp. %.0f</string>
    <string name="buy_now">Buy Now</string>
    <string name="fruit_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent in posuere dui. In hac habitasse platea dictumst. Morbi vitae tincidunt leo. Etiam id libero at turpis mollis posuere consectetur.</string>
    <string name="fruit_farm">by Farm Fresh Veg Shop</string>
    <string name="fruit_name">Banana</string>
    <string name="text_by_shop">by %s</string>
    <string name="text_product_price_format_idr">IDR %.0f</string>
</resources>