<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--Header-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="34dp"
            android:layout_height="34dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_profile" />

        <TextView
            android:id="@+id/tv_title_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_title_header"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/ll_price_fish_burger"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_header">

            <ImageView
                android:id="@+id/iv_location_header"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:src="@drawable/ic_location_header" />

            <TextView
                android:id="@+id/tv_header_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:text="@string/text_header_location"
                android:textSize="12sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/nsv_homepage"
        app:layout_constraintTop_toBottomOf="@+id/cl_header"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--Banner-->
            <androidx.cardview.widget.CardView
                android:id="@+id/cv_banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                app:cardBackgroundColor="@color/app_color_primary"
                app:cardCornerRadius="18dp"
                app:cardElevation="8dp">

                <ImageView
                    android:id="@+id/iv_background_banner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/img_banner" />

                <LinearLayout
                    android:id="@+id/ll_banner"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/tv_desc_banner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_banner_desc"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_greeting_banner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_banner_greeting"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!--Categories Recyclerview-->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                android:layout_marginStart="16dp"/>

            <TextView
                android:id="@+id/tv_greeting_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_greeting_product"
                android:layout_marginHorizontal="16dp"
                android:textStyle="bold"
                style="@style/TextAppearance.Material3.TitleLarge"/>

            <!--Product Recyclerview-->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_fruit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_greeting_product" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>